--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>chapter02-userdetails</module>
         <module>chapter04-captcha</module>
         <module>chapter04-captcha-provider</module>
+        <module>chapter09-CSRF</module>
     </modules>
 
     <parent>
